# S3SyncUtility

./: .config.ini.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
MVC/controller/: manager.py
MVC/model/: download.py  size.py  upload.py
commands/: common.py  download.py  multipart.py  size.py  state_management.py  upload.py
config/: utils.py
s3sync/: __main__.py
s3sync/commands/: common.py  download.py  size.py  state_management.py  upload.py
s3sync/config/: utils.py
s3sync_util/: __main__.py  __version__.py  logger.py  main.py  pyproject.toml
s3sync_util/MVC/model/: common.py  multipart.py  state management.py
s3sync_util/MVC/model/config/: util.py
s3sync_util/MVC/view/: commands.py
s3sync_util/commands/: common.py  download.py  ls.py  multipart.py  size.py  state_management.py  upload.py
s3sync_util/config/: utils.py
