[tool.poetry]
name = "s3sync"
version = "2.0.0"
description = "Sync directories/files with Amazon S3."
authors = ["Lakshmi Narasimman <lakshminarasimman@v3analytics.in>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.28.30"
configparser = "^6.0.0"

[tool.poetry.group.test]

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
s3sync = "s3sync.__main__:main"
